# art_hug_06

./: .env.example  .gitignore  README.md  Taskfile.yml  ch_06_project.yaml  pyproject.toml
docs/: article6.md  article6_original.md  article6i.md
notebooks/: prompt_engineering_tutorial.ipynb
src/: __init__.py  conversational_ai.py  document_processor.py  main.py  main_simple.py  multi_task_learning.py  named_entity_recognition.py  prompt_manager.py  question_answering.py  secure_prompt.py  summarization.py  text_generation.py
tests/: test_examples.py
